updated html and js

--- a/companies.html
+++ b/companies.html
@@ -30,8 +30,10 @@
 
         <button onclick="myFunction()">Add a company</button>
 
+#
+        <button id="addedURL"></button>
 
-        <!-- <button id="addedURL"></button> -->
+        <img src="http://www.codesquad-test.org/assets/img/wayfair_logo.png" alt="logo"> 
     </div>
 
     <p2>Trademark 2018-2020 by CodeSquad at Lena Park</p2>
